--- a/AnythingWorld.Editor.csproj
+++ b/AnythingWorld.Editor.csproj
@@ -9,11 +9,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace></RootNamespace>
-    <ProjectGuid>{717290EF-998F-B986-0B46-66DF2A804256}</ProjectGuid>
+    <RootNamespace>AnythingWorld.Editor</RootNamespace>
+    <ProjectGuid>{FFAE9FEA-A963-F857-EB3B-4319D06929BC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <AssemblyName>Assembly-CSharp-Editor</AssemblyName>
+    <AssemblyName>AnythingWorld.Editor</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <BaseDirectory>.</BaseDirectory>
@@ -55,7 +55,33 @@
     <UnityVersion>2021.3.37f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Assets\TutorialInfo\Scripts\Editor\ReadmeEditor.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\AISettingsEditor.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\AnythingEditor.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\ScriptableObjectExtensions.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\ModelDataInspectorEditor.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\TransformSettingsEditor.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\EditorLoadingIcon.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\AboutAnythingWorldEditor.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\LogInEditor.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\MyWorldEditor.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\AICreatorEditor.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\AnythingCreatorEditor.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\VersionChecker\AutoRunUtil.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\AnythingSettingsEditor.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\VersionChecker\SessionManager.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\DefaultBehaviourEditorScriptable.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\VersionChecker\VersionCheckEditor.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\WelcomeWindow.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\InputFocusManager.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\GridAreaSettingsEditor.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\SceneTextureDrawer.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\EditorNetworkErrorHandler.cs" />
+    <Compile Include="Assets\AnythingWorld\AnythingEditor\Editor\ModelBrowserEditor.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\AnythingWorld\AnythingEditor\Editor\Resources\Fonts\OpenSans\Apache License.txt" />
+    <None Include="Assets\AnythingWorld\AnythingEditor\Editor\Resources\Fonts\Poppins\OFL.txt" />
+    <None Include="Assets\AnythingWorld\AnythingEditor\AnythingWorld.Editor.asmdef" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
@@ -404,10 +430,6 @@
     </Reference>
     <Reference Include="Unity.Plastic.Newtonsoft.Json">
       <HintPath>Library\PackageCache\com.unity.collab-proxy@2.3.1\Lib\Editor\PlasticSCM\Unity.Plastic.Newtonsoft.Json.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>Assets\JsonDotNet\Assemblies\Standalone\Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Unity.Plastic.Antlr3.Runtime">
@@ -950,6 +972,14 @@
       <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.37f1\Editor\Data\UnityReferenceAssemblies\unity-4.8-api\Facades\System.Xml.XPath.XDocument.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEditor.UI">
+      <HintPath>Library\ScriptAssemblies\UnityEditor.UI.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>Library\ScriptAssemblies\UnityEngine.UI.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="UnityEngine.TestRunner">
       <HintPath>Library\ScriptAssemblies\UnityEngine.TestRunner.dll</HintPath>
       <Private>False</Private>
@@ -958,147 +988,27 @@
       <HintPath>Library\ScriptAssemblies\UnityEditor.TestRunner.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Unity.VisualScripting.Flow.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.VisualScripting.Flow.Editor.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.VSCode.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.VSCode.Editor.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.Notifications">
-      <HintPath>Library\ScriptAssemblies\Unity.Notifications.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.TextMeshPro.Editor.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.VisualStudio.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.VisualStudio.Editor.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.Profiling.Core">
-      <HintPath>Library\ScriptAssemblies\Unity.Profiling.Core.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.Timeline">
-      <HintPath>Library\ScriptAssemblies\Unity.Timeline.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.Core.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.VisualScripting.Core.Editor.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.TextMeshPro">
-      <HintPath>Library\ScriptAssemblies\Unity.TextMeshPro.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.State.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.VisualScripting.State.Editor.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.AdaptivePerformance.Simulator.Extension">
-      <HintPath>Library\ScriptAssemblies\Unity.AdaptivePerformance.Simulator.Extension.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.SettingsProvider.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.VisualScripting.SettingsProvider.Editor.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.Subsystem.Registration">
-      <HintPath>Library\ScriptAssemblies\Unity.Subsystem.Registration.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.AdaptivePerformance.UI.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.AdaptivePerformance.UI.Editor.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEditor.UI">
-      <HintPath>Library\ScriptAssemblies\UnityEditor.UI.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.PlasticSCM.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.PlasticSCM.Editor.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.Rider.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.Rider.Editor.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.Flow">
-      <HintPath>Library\ScriptAssemblies\Unity.VisualScripting.Flow.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>Library\ScriptAssemblies\UnityEngine.UI.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.Notifications.iOS">
-      <HintPath>Library\ScriptAssemblies\Unity.Notifications.iOS.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.Core">
-      <HintPath>Library\ScriptAssemblies\Unity.VisualScripting.Core.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.AdaptivePerformance.Simulator.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.AdaptivePerformance.Simulator.Editor.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.AdaptivePerformance.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.AdaptivePerformance.Editor.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.Shared.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.VisualScripting.Shared.Editor.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.Notifications.Unified">
-      <HintPath>Library\ScriptAssemblies\Unity.Notifications.Unified.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.Mobile.AndroidLogcat.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.Mobile.AndroidLogcat.Editor.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.Timeline.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.Timeline.Editor.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.AdaptivePerformance">
-      <HintPath>Library\ScriptAssemblies\Unity.AdaptivePerformance.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.Notifications.Android">
-      <HintPath>Library\ScriptAssemblies\Unity.Notifications.Android.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.AdaptivePerformance.Profiler.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.AdaptivePerformance.Profiler.Editor.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.State">
-      <HintPath>Library\ScriptAssemblies\Unity.VisualScripting.State.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="Assembly-CSharp.csproj">
-      <Project>{83E668D3-C026-CF57-6D8E-6316B455AE2B}</Project>
-      <Name>Assembly-CSharp</Name>
+    <ProjectReference Include="AnythingWorld.Utilities.csproj">
+      <Project>{DAF72419-A320-2030-B4B1-54A9B02F3441}</Project>
+      <Name>AnythingWorld.Utilities</Name>
     </ProjectReference>
-    <ProjectReference Include="Dracodec.csproj">
-      <Project>{455324CB-8541-E47E-7EC0-44176BF6717D}</Project>
-      <Name>Dracodec</Name>
+    <ProjectReference Include="AnythingWorld.Networking.Editor.csproj">
+      <Project>{AEA149C3-99D2-56A6-4C50-76FEF229A2BB}</Project>
+      <Name>AnythingWorld.Networking.Editor</Name>
     </ProjectReference>
-    <ProjectReference Include="Siccity.GLTFUtility.csproj">
-      <Project>{DA5266F7-AC80-3460-0FB9-FE9ECB538168}</Project>
-      <Name>Siccity.GLTFUtility</Name>
+    <ProjectReference Include="AnythingWorld.csproj">
+      <Project>{B5A1DACE-FE0E-3BB4-2EC1-38EFC8AC4808}</Project>
+      <Name>AnythingWorld</Name>
     </ProjectReference>
-    <ProjectReference Include="Siccity.GLTFUtility.Editor.csproj">
-      <Project>{D5E52F07-0940-011A-72F0-859BF36F5E10}</Project>
-      <Name>Siccity.GLTFUtility.Editor</Name>
+    <ProjectReference Include="AnythingWorld.Voice.csproj">
+      <Project>{5BC34D66-986A-BB21-19A7-50BA8D2A7E0C}</Project>
+      <Name>AnythingWorld.Voice</Name>
+    </ProjectReference>
+    <ProjectReference Include="AnythingWorld.Utilities.Editor.csproj">
+      <Project>{B1476C18-A127-6677-CE3D-E01688DDBD05}</Project>
+      <Name>AnythingWorld.Utilities.Editor</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
